@@ -16,7 +16,6 @@
  */
 package org.apache.solr.metrics;
 
-import java.io.IOException;
 import java.lang.invoke.MethodHandles;
 import java.util.ArrayList;
 import java.util.Arrays;
@@ -28,12 +27,10 @@ import java.util.List;
 import java.util.Map;
 import java.util.Objects;
 import java.util.Set;
+import java.util.concurrent.Callable;
 import java.util.concurrent.ConcurrentHashMap;
 import java.util.concurrent.ConcurrentMap;
-import java.util.concurrent.TimeUnit;
-import java.util.concurrent.atomic.AtomicInteger;
-import java.util.concurrent.locks.Lock;
-import java.util.concurrent.locks.ReentrantLock;
+import java.util.concurrent.RejectedExecutionException;
 import java.util.regex.Pattern;
 import java.util.regex.PatternSyntaxException;
 import java.util.stream.Collectors;
@@ -46,9 +43,10 @@ import com.codahale.metrics.Metric;
 import com.codahale.metrics.MetricFilter;
 import com.codahale.metrics.MetricRegistry;
 import com.codahale.metrics.MetricSet;
-import com.codahale.metrics.SharedMetricRegistries;
 import com.codahale.metrics.Timer;
+import org.apache.solr.common.ParWork;
 import org.apache.solr.common.util.NamedList;
+import org.apache.solr.common.util.Utils;
 import org.apache.solr.core.CoreContainer;
 import org.apache.solr.core.MetricsConfig;
 import org.apache.solr.core.PluginInfo;
@@ -56,6 +54,7 @@ import org.apache.solr.core.SolrCore;
 import org.apache.solr.core.SolrInfoBean;
 import org.apache.solr.core.SolrResourceLoader;
 import org.apache.solr.logging.MDCLoggingContext;
+import org.jctools.maps.NonBlockingHashMap;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
 import org.slf4j.MDC;
@@ -75,10 +74,10 @@ import org.slf4j.MDC;
  * <p>This class enforces a common prefix ({@link #REGISTRY_NAME_PREFIX}) in all registry
  * names.</p>
  * <p>Solr uses several different registries for collecting metrics belonging to different groups, using
- * {@link org.apache.solr.core.SolrInfoBean.Group} as the main name of the registry (plus the
- * above-mentioned prefix). Instances of {@link SolrMetricManager} are created for each {@link org.apache.solr.core.CoreContainer},
+ * {@link SolrInfoBean.Group} as the main name of the registry (plus the
+ * above-mentioned prefix). Instances of {@link SolrMetricManager} are created for each {@link CoreContainer},
  * and most registries are local to each instance, with the exception of two global registries:
- * <code>solr.jetty</code> and <code>solr.jvm</code>, which are shared between all {@link org.apache.solr.core.CoreContainer}-s</p>
+ * <code>solr.jetty</code> and <code>solr.jvm</code>, which are shared between all {@link CoreContainer}-s</p>
  */
 public class SolrMetricManager {
 
@@ -100,20 +99,21 @@ public class SolrMetricManager {
    * system properties. This registry is shared between instances of {@link SolrMetricManager}.
    */
   public static final String JVM_REGISTRY = REGISTRY_NAME_PREFIX + SolrInfoBean.Group.jvm.toString();
+  public static final PluginInfo[] PLUGIN_INFOS_EMPTY = new PluginInfo[0];
+  private static final Pattern COMPILE = Pattern.compile("[\\s,]+");
 
-  private final ConcurrentMap<String, MetricRegistry> registries = new ConcurrentHashMap<>();
+  private final Map<String, MetricRegistry> registries = new ConcurrentHashMap<>(12);
 
-  private final Map<String, Map<String, SolrMetricReporter>> reporters = new HashMap<>();
+  public static final Map<String, MetricRegistry> REGISTRIES = new ConcurrentHashMap<>(12);
 
-  private final Lock reportersLock = new ReentrantLock();
-  private final Lock swapLock = new ReentrantLock();
+  private final Map<String, Map<String, SolrMetricReporter>> reporters = new ConcurrentHashMap<>(16);
 
   public static final int DEFAULT_CLOUD_REPORTER_PERIOD = 60;
 
-  private MetricRegistry.MetricSupplier<Counter> counterSupplier;
-  private MetricRegistry.MetricSupplier<Meter> meterSupplier;
-  private MetricRegistry.MetricSupplier<Timer> timerSupplier;
-  private MetricRegistry.MetricSupplier<Histogram> histogramSupplier;
+  private final MetricRegistry.MetricSupplier<Counter> counterSupplier;
+  private final MetricRegistry.MetricSupplier<Meter> meterSupplier;
+  private final MetricRegistry.MetricSupplier<Timer> timerSupplier;
+  private final MetricRegistry.MetricSupplier<Histogram> histogramSupplier;
 
   public SolrMetricManager() {
     counterSupplier = MetricSuppliers.counterSupplier(null, null);
@@ -365,9 +365,9 @@ public class SolrMetricManager {
    * Return a set of existing registry names.
    */
   public Set<String> registryNames() {
-    Set<String> set = new HashSet<>();
+    Set<String> set = new HashSet<>(registries.size() + REGISTRIES.size());
     set.addAll(registries.keySet());
-    set.addAll(SharedMetricRegistries.names());
+    set.addAll(REGISTRIES.keySet());
     return set;
   }
 
@@ -399,7 +399,7 @@ public class SolrMetricManager {
     for (String pattern : patterns) {
       compiled.add(Pattern.compile(pattern));
     }
-    return registryNames((Pattern[]) compiled.toArray(new Pattern[compiled.size()]));
+    return registryNames(compiled.toArray(new Pattern[0]));
   }
 
   public Set<String> registryNames(Pattern... patterns) {
@@ -438,14 +438,11 @@ public class SolrMetricManager {
   public MetricRegistry registry(String registry) {
     registry = enforcePrefix(registry);
     if (isSharedRegistry(registry)) {
-      return SharedMetricRegistries.getOrCreate(registry);
+      MetricRegistry reg = REGISTRIES.computeIfAbsent(registry, s -> new SolrMetricRegistry());
+      return reg;
     } else {
-      swapLock.lock();
-      try {
-        return getOrCreateRegistry(registries, registry);
-      } finally {
-        swapLock.unlock();
-      }
+      MetricRegistry reg = registries.computeIfAbsent(registry, s -> new SolrMetricRegistry());
+      return reg;
     }
   }
 
@@ -457,7 +454,7 @@ public class SolrMetricManager {
       if (raced == null) {
         return created;
       } else {
-        return raced;
+        throw new IllegalStateException();
       }
     } else {
       return existing;
@@ -470,25 +467,24 @@ public class SolrMetricManager {
    * @param registry name of the registry to remove
    */
   public void removeRegistry(String registry) {
-    // close any reporters for this registry first
-    closeReporters(registry, null);
-    // make sure we use a name with prefix
-    registry = enforcePrefix(registry);
-    if (isSharedRegistry(registry)) {
-      SharedMetricRegistries.remove(registry);
-    } else {
-      swapLock.lock();
-      try {
+    try {
+      // close any reporters for this registry first
+      closeReporters(registry, null);
+      // make sure we use a name with prefix
+      registry = enforcePrefix(registry);
+      if (isSharedRegistry(registry)) {
+        REGISTRIES.remove(registry);
+      } else {
         registries.remove(registry);
-      } finally {
-        swapLock.unlock();
       }
+    } catch (Exception e) {
+      log.error("Exception removing metric history entries");
     }
   }
 
   /**
    * Swap registries. This is useful eg. during
-   * {@link org.apache.solr.core.SolrCore} rename or swap operations. NOTE:
+   * {@link SolrCore} rename or swap operations. NOTE:
    * this operation is not supported for shared registries.
    *
    * @param registry1 source registry
@@ -500,25 +496,22 @@ public class SolrMetricManager {
     registry1 = enforcePrefix(registry1);
     registry2 = enforcePrefix(registry2);
     if (isSharedRegistry(registry1) || isSharedRegistry(registry2)) {
-      throw new UnsupportedOperationException("Cannot swap shared registry: " + registry1 + ", " + registry2);
+      throw new UnsupportedOperationException(
+          "Cannot swap shared registry: " + registry1 + ", " + registry2);
     }
-    swapLock.lock();
-    try {
-      MetricRegistry from = registries.get(registry1);
-      MetricRegistry to = registries.get(registry2);
-      if (from == to) {
-        return;
-      }
-      MetricRegistry reg1 = registries.remove(registry1);
-      MetricRegistry reg2 = registries.remove(registry2);
-      if (reg2 != null) {
-        registries.put(registry1, reg2);
-      }
-      if (reg1 != null) {
-        registries.put(registry2, reg1);
-      }
-    } finally {
-      swapLock.unlock();
+
+    MetricRegistry from = registries.get(registry1);
+    MetricRegistry to = registries.get(registry2);
+    if (from == to) {
+      return;
+    }
+    MetricRegistry reg1 = registries.remove(registry1);
+    MetricRegistry reg2 = registries.remove(registry2);
+    if (reg2 != null) {
+      registries.put(registry1, reg2);
+    }
+    if (reg1 != null) {
+      registries.put(registry2, reg1);
     }
   }
 
@@ -546,26 +539,15 @@ public class SolrMetricManager {
    *
    * @param registry   registry name
    * @param metrics    metric set to register
-   * @param strategy   the conflict resolution strategy to use if the named metric already exists.
    * @param metricPath (optional) additional top-most metric name path elements
-   * @throws Exception if a metric with this name already exists.
    */
-  public void registerAll(String registry, MetricSet metrics, ResolutionStrategy strategy, String... metricPath) throws Exception {
+  public void registerAll(String registry, MetricSet metrics, boolean force, String... metricPath) {
     MetricRegistry metricRegistry = registry(registry);
-    synchronized (metricRegistry) {
-      Map<String, Metric> existingMetrics = metricRegistry.getMetrics();
-      for (Map.Entry<String, Metric> entry : metrics.getMetrics().entrySet()) {
-        String fullName = mkName(entry.getKey(), metricPath);
-        if (existingMetrics.containsKey(fullName)) {
-          if (strategy == ResolutionStrategy.REPLACE) {
-            metricRegistry.remove(fullName);
-          } else if (strategy == ResolutionStrategy.IGNORE) {
-            continue;
-          } // strategy == ERROR will fail when we try to register later
-        }
-        metricRegistry.register(fullName, entry.getValue());
-      }
-    }
+
+    metrics.getMetrics().forEach((key, value) -> {
+      String fullName = mkName(key, metricPath);
+      ((SolrMetricRegistry) metricRegistry).register(fullName, value, force);
+    });
   }
 
   /**
@@ -574,7 +556,7 @@ public class SolrMetricManager {
    * @param registry registry name
    */
   public void clearRegistry(String registry) {
-    registry(registry).removeMatching(MetricFilter.ALL);
+    ((SolrMetricRegistry) registry(registry)).clear();
   }
 
   /**
@@ -696,18 +678,14 @@ public class SolrMetricManager {
    *                   using dotted notation
    * @param metricPath (optional) additional top-most metric name path elements
    */
-  public void registerMetric(SolrMetricsContext context, String registry, Metric metric, boolean force, String metricName, String... metricPath) {
-    MetricRegistry metricRegistry = registry(registry);
+  public String registerMetric(SolrMetricsContext context, String registry, Metric metric, boolean force, String metricName, String... metricPath) {
+    SolrMetricRegistry metricRegistry = (SolrMetricRegistry) registry(registry);
     String fullName = mkName(metricName, metricPath);
     if (context != null) {
       context.registerMetricName(fullName);
     }
-    synchronized (metricRegistry) { // prevent race; register() throws if metric is already present
-      if (force) { // must remove any existing one if present
-        metricRegistry.remove(fullName);
-      }
-      metricRegistry.register(fullName, metric);
-    }
+    metricRegistry.register(fullName, metric, force);
+    return fullName;
   }
 
   /**
@@ -744,26 +722,37 @@ public class SolrMetricManager {
     registerMetric(context, registry, new GaugeWrapper(gauge, tag), force, metricName, metricPath);
   }
 
-  public int unregisterGauges(String registryName, String tagSegment) {
+  public void unregisterGauges(String registryName, String tagSegment) {
     if (tagSegment == null) {
-      return 0;
+      return;
     }
     MetricRegistry registry = registry(registryName);
-    if (registry == null) return 0;
-    AtomicInteger removed = new AtomicInteger();
-    registry.removeMatching((name, metric) -> {
-      if (metric instanceof GaugeWrapper) {
-        GaugeWrapper wrapper = (GaugeWrapper) metric;
-        boolean toRemove = wrapper.getTag().contains(tagSegment);
-        if (toRemove) {
-          removed.incrementAndGet();
-        }
-        return toRemove;
-      }
-      return false;
+    if (registry == null) return;
 
-    });
-    return removed.get();
+    try {
+      ParWork.submit("unregisterGauges", () -> {
+        registry.removeMatching((name, metric) -> {
+          if (metric instanceof GaugeWrapper) {
+            GaugeWrapper wrapper = (GaugeWrapper) metric;
+            boolean toRemove = wrapper.getTag().contains(tagSegment);
+            return toRemove;
+          }
+          return false;
+
+        });
+      });
+    } catch (RejectedExecutionException e) {
+      registry.removeMatching((name, metric) -> {
+        if (metric instanceof GaugeWrapper) {
+          GaugeWrapper wrapper = (GaugeWrapper) metric;
+          boolean toRemove = wrapper.getTag().contains(tagSegment);
+          return toRemove;
+        }
+        return false;
+      });
+    }
+
+    return;
   }
 
   /**
@@ -788,7 +777,7 @@ public class SolrMetricManager {
     if (path == null || path.size() == 0) {
       return name;
     } else {
-      StringBuilder sb = new StringBuilder();
+      StringBuilder sb = new StringBuilder(128);
       for (String s : path) {
         if (s == null || s.isEmpty()) {
           continue;
@@ -852,7 +841,7 @@ public class SolrMetricManager {
   // reporter management
 
   /**
-   * Create and register {@link SolrMetricReporter}-s specific to a {@link org.apache.solr.core.SolrInfoBean.Group}.
+   * Create and register {@link SolrMetricReporter}-s specific to a {@link SolrInfoBean.Group}.
    * Note: reporters that specify neither "group" nor "registry" attributes are treated as universal -
    * they will always be loaded for any group. These two attributes may also contain multiple comma- or
    * whitespace-separated values, in which case the reporter will be loaded for any matching value from
@@ -864,20 +853,29 @@ public class SolrMetricManager {
    * @param solrCore      optional solr core
    * @param tag           optional tag for the reporters, to distinguish reporters logically created for different parent
    *                      component instances.
-   * @param group         selected group, not null
+   * @param group         selected group, not nullSolrMetricManagerTest
    * @param registryNames optional child registry name elements
    */
   public void loadReporters(PluginInfo[] pluginInfos, SolrResourceLoader loader, CoreContainer coreContainer, SolrCore solrCore, String tag, SolrInfoBean.Group group, String... registryNames) {
     if (pluginInfos == null || pluginInfos.length == 0) {
       return;
     }
+    List<Callable<PluginInfo>> calls = new ArrayList<>();
     String registryName = getRegistryName(group, registryNames);
     for (PluginInfo info : pluginInfos) {
+      boolean enabled = true;
+      Object enabledo = info.attributes.get("enabled");
+      if (enabledo != null) {
+         enabled = Boolean.parseBoolean(enabledo.toString());
+      }
+      if (!enabled) {
+        continue;
+      }
       String target = info.attributes.get("group");
       if (target == null) { // no "group"
         target = info.attributes.get("registry");
         if (target != null) {
-          String[] targets = target.split("[\\s,]+");
+          String[] targets = COMPILE.split(target);
           boolean found = false;
           for (String t : targets) {
             t = enforcePrefix(t);
@@ -906,10 +904,20 @@ public class SolrMetricManager {
           continue;
         }
       }
-      try {
-        loadReporter(registryName, loader, coreContainer, solrCore, info, tag);
-      } catch (Exception e) {
-        log.warn("Error loading metrics reporter, plugin info: {}", info, e);
+
+      calls.add(()->{
+        try {
+          loadReporter(registryName, loader, coreContainer, solrCore, info, tag);
+        } catch (Exception e) {
+          log.warn("Error loading metrics reporter, plugin info: {}", info, e);
+        }
+        return info;
+      });
+
+    }
+    if (calls.size() > 0) {
+      try (ParWork worker = new ParWork(this, false)) {
+        worker.collect(calls);
       }
     }
   }
@@ -961,17 +969,16 @@ public class SolrMetricManager {
     registry = enforcePrefix(registry);
     SolrMetricReporter reporter = loader.newInstance(
         pluginInfo.className,
-        SolrMetricReporter.class,
-        new String[0],
+        SolrMetricReporter.class, Utils.EMPTY_STRINGS,
         new Class[]{SolrMetricManager.class, String.class},
         new Object[]{this, registry}
     );
     // prepare MDC for plugins that want to use its properties
-    MDCLoggingContext.setCoreDescriptor(coreContainer, solrCore == null ? null : solrCore.getCoreDescriptor());
     if (tag != null) {
       // add instance tag to MDC
       MDC.put("tag", "t:" + tag);
     }
+    MDCLoggingContext.setCoreName(solrCore == null ? null : solrCore.getName());
     try {
       if (reporter instanceof SolrCoreReporter) {
         ((SolrCoreReporter) reporter).init(pluginInfo, solrCore);
@@ -990,31 +997,23 @@ public class SolrMetricManager {
   }
 
   private void registerReporter(String registry, String name, String tag, SolrMetricReporter reporter) throws Exception {
-    try {
-      if (!reportersLock.tryLock(10, TimeUnit.SECONDS)) {
-        throw new Exception("Could not obtain lock to modify reporters registry: " + registry);
+    Map<String,SolrMetricReporter> perRegistry = reporters.get(registry);
+    if (perRegistry == null) {
+      perRegistry = new NonBlockingHashMap<>();
+      Map<String,SolrMetricReporter> existingRegistry = reporters.putIfAbsent(registry, perRegistry);
+      if (existingRegistry != null) {
+        perRegistry = existingRegistry;
       }
-    } catch (InterruptedException e) {
-      throw new Exception("Interrupted while trying to obtain lock to modify reporters registry: " + registry);
     }
-    try {
-      Map<String, SolrMetricReporter> perRegistry = reporters.get(registry);
-      if (perRegistry == null) {
-        perRegistry = new HashMap<>();
-        reporters.put(registry, perRegistry);
-      }
-      if (tag != null && !tag.isEmpty()) {
-        name = name + "@" + tag;
-      }
-      SolrMetricReporter oldReporter = perRegistry.get(name);
-      if (oldReporter != null) { // close it
-        log.info("Replacing existing reporter '{}' in registry'{}': {}", name, registry, oldReporter);
-        oldReporter.close();
-      }
-      perRegistry.put(name, reporter);
+    if (tag != null && !tag.isEmpty()) {
+      name = name + "@" + tag;
+    }
 
-    } finally {
-      reportersLock.unlock();
+    SolrMetricReporter oldReporter = perRegistry.put(name, reporter);
+
+    if (oldReporter != null) { // close it
+      log.info("Replacing existing reporter '{}' in registry'{}': {}", name, registry, oldReporter);
+      oldReporter.close();
     }
   }
 
@@ -1030,36 +1029,24 @@ public class SolrMetricManager {
   public boolean closeReporter(String registry, String name, String tag) {
     // make sure we use a name with prefix
     registry = enforcePrefix(registry);
-    try {
-      if (!reportersLock.tryLock(10, TimeUnit.SECONDS)) {
-        log.warn("Could not obtain lock to modify reporters registry: {}", registry);
-        return false;
-      }
-    } catch (InterruptedException e) {
-      log.warn("Interrupted while trying to obtain lock to modify reporters registry: {}", registry);
+
+    Map<String,SolrMetricReporter> perRegistry = reporters.get(registry);
+    if (perRegistry == null) {
+      return false;
+    }
+    if (tag != null && !tag.isEmpty()) {
+      name = name + "@" + tag;
+    }
+    SolrMetricReporter reporter = perRegistry.remove(name);
+    if (reporter == null) {
       return false;
     }
     try {
-      Map<String, SolrMetricReporter> perRegistry = reporters.get(registry);
-      if (perRegistry == null) {
-        return false;
-      }
-      if (tag != null && !tag.isEmpty()) {
-        name = name + "@" + tag;
-      }
-      SolrMetricReporter reporter = perRegistry.remove(name);
-      if (reporter == null) {
-        return false;
-      }
-      try {
-        reporter.close();
-      } catch (Exception e) {
-        log.warn("Error closing metric reporter, registry={}, name={}", registry, name, e);
-      }
-      return true;
-    } finally {
-      reportersLock.unlock();
+      reporter.close();
+    } catch (Exception e) {
+      log.warn("Error closing metric reporter, registry={}, name={}", registry, name, e);
     }
+    return true;
   }
 
   /**
@@ -1081,45 +1068,38 @@ public class SolrMetricManager {
    * @return names of closed reporters
    */
   public Set<String> closeReporters(String registry, String tag) {
+    long start = System.currentTimeMillis();
+    Set<String> removed = new HashSet<>();
+    List<SolrMetricReporter> closeReporters = new ArrayList<>();
     // make sure we use a name with prefix
     registry = enforcePrefix(registry);
-    try {
-      if (!reportersLock.tryLock(10, TimeUnit.SECONDS)) {
-        log.warn("Could not obtain lock to modify reporters registry: {}", registry);
-        return Collections.emptySet();
-      }
-    } catch (InterruptedException e) {
-      log.warn("Interrupted while trying to obtain lock to modify reporters registry: {}", registry);
-      return Collections.emptySet();
-    }
-    log.info("Closing metric reporters for registry={} tag={}", registry, tag);
-    try {
-      Map<String, SolrMetricReporter> perRegistry = reporters.get(registry);
-      if (perRegistry != null) {
-        Set<String> names = new HashSet<>(perRegistry.keySet());
-        Set<String> removed = new HashSet<>();
-        names.forEach(name -> {
-          if (tag != null && !tag.isEmpty() && !name.endsWith("@" + tag)) {
-            return;
-          }
-          SolrMetricReporter reporter = perRegistry.remove(name);
-          try {
-            reporter.close();
-          } catch (IOException ioe) {
-            log.warn("Exception closing reporter {}", reporter, ioe);
-          }
-          removed.add(name);
-        });
-        if (removed.size() == names.size()) {
-          reporters.remove(registry);
+
+    if (log.isDebugEnabled()) log.debug("Closing metric reporters for registry={}, tag={}", registry, tag);
+    // MRM TODO:
+    Map<String,SolrMetricReporter> perRegistry = reporters.get(registry);
+    if (perRegistry != null) {
+
+
+      perRegistry.keySet().forEach(name -> {
+        if (tag != null && !tag.isEmpty() && !name.endsWith("@" + tag)) {
+          return;
         }
-        return removed;
-      } else {
-        return Collections.emptySet();
+        SolrMetricReporter reporter = perRegistry.remove(name);
+
+        closeReporters.add(reporter);
+        removed.add(name);
+      });
+      if (perRegistry.size() == 0) {
+        reporters.remove(registry);
       }
-    } finally {
-      reportersLock.unlock();
     }
+
+    if (closeReporters.size() > 0) {
+      try (ParWork closer = new ParWork(this, true)) {
+        closer.collect("MetricReporters", closeReporters);
+      }
+    }
+    return removed;
   }
 
   /**
@@ -1131,34 +1111,21 @@ public class SolrMetricManager {
   public Map<String, SolrMetricReporter> getReporters(String registry) {
     // make sure we use a name with prefix
     registry = enforcePrefix(registry);
-    try {
-      if (!reportersLock.tryLock(10, TimeUnit.SECONDS)) {
-        log.warn("Could not obtain lock to modify reporters registry: {}", registry);
-        return Collections.emptyMap();
-      }
-    } catch (InterruptedException e) {
-      log.warn("Interrupted while trying to obtain lock to modify reporters registry: {}", registry);
+
+    Map<String,SolrMetricReporter> perRegistry = reporters.get(registry);
+    if (perRegistry == null) {
       return Collections.emptyMap();
-    }
-    try {
-      Map<String, SolrMetricReporter> perRegistry = reporters.get(registry);
-      if (perRegistry == null) {
-        return Collections.emptyMap();
-      } else {
-        // defensive copy - the original map may change after we release the lock
-        return Collections.unmodifiableMap(new HashMap<>(perRegistry));
-      }
-    } finally {
-      reportersLock.unlock();
+    } else {
+      // defensive copy - the original map may change after we release the lock
+      return Map.copyOf(perRegistry);
     }
   }
 
-  private List<PluginInfo> prepareCloudPlugins(PluginInfo[] pluginInfos, String group,
-                                               Map<String, String> defaultAttributes,
-                                               Map<String, Object> defaultInitArgs) {
+  private static List<PluginInfo> prepareCloudPlugins(PluginInfo[] pluginInfos, String group, Map<String,String> defaultAttributes,
+      Map<String,Object> defaultInitArgs) {
     List<PluginInfo> result = new ArrayList<>();
     if (pluginInfos == null) {
-      pluginInfos = new PluginInfo[0];
+      pluginInfos = PLUGIN_INFOS_EMPTY;
     }
     for (PluginInfo info : pluginInfos) {
       String groupAttr = info.attributes.get("group");
@@ -1173,8 +1140,7 @@ public class SolrMetricManager {
     return result;
   }
 
-  private PluginInfo preparePlugin(PluginInfo info, Map<String, String> defaultAttributes,
-                                   Map<String, Object> defaultInitArgs) {
+  private static PluginInfo preparePlugin(PluginInfo info, Map<String,String> defaultAttributes, Map<String,Object> defaultInitArgs) {
     if (info == null) {
       return null;
     }
